2018-11-19  Richard Larsson  <larsson@mps.mpg.de>

	* arts-2-3-1155

	* src/transmissionmatrix.cc,src/propagationmatrix.cc:
	fixed small bug found while testing the distance-derivatives.
	Previous code had not done the chain rule right for the distance
	derivatives, only keeping one of the two levels. 
	
	I have also found a bug for stokes_dim 2 and 3 derivatives.
	I will go over these bugs more later since these two cases
	are not common enough to be part of the fast tests...
	
	Also, I have changed the order of the input to the derivatives
	transmission matrix because it was not the same as for other 
	variables

	* src/test_propagationmatrix.cc:  Testing the above.  

2018-11-17  Richard Larsson  <larsson@mps.mpg.de>

	* arts-2-3-1154

	Added deactivated HSE guesswork derivatives calculations.
	I don't trust these at all because I cannot test them properly
	without implementing derivatives in ppath.  They are currently
	only active by a very obvious flag in m_rte.cc that needs to
	manually be set to another value.  There is no way to run
	without HSE derivatives if this flag is true so it is
	just around because Patrick wanted something to test.  For
	this flag to be removed, a runtime_error in the iy-checking
	method that asserts we have HSE in said agenda, and a method
	to set the Index that indicates the temperature derivative
	to something negative when HSE is not active while running
	with temperature derivatives.

	* src/m_rte.cc:  Made a branch of transmission calculations
	that should be removed once people are happy with the HSE
	state.  Note that I did not bother at all to check whether
	the signs are OK.  If the temperature is increased for the
	level in front of you when you look down, the sign should be
	negative on lstep, but if you are looking up and the level
	above you gets warmer, the change in lstep is positive.  So
	the two levels carry different signs.

	* rte.cc,h: Activate inactive code inside the